# DevPulse

./: .gitignore  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CODEX.md  GUARDRAILS.md  MARVIS.md  MULTIPLATFORM.md  QWEN.md  READMe.md  cli.py  docker-compose.prod.yml
backend/: .dockerignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-docker.txt
backend/devpulse/: __init__.py  config.py  main.py
backend/devpulse/agents/: __init__.py  analyzer_agent.py  base.py  crawler_agent.py  publisher_agent.py  summarizer_agent.py
backend/devpulse/api/: __init__.py  dependencies.py
backend/devpulse/cli/: __init__.py  main.py
backend/devpulse/core/: __init__.py  database.py  models.py  repository.py
backend/devpulse/pipeline/: __init__.py  meta_gpt_coordinator.py
backend/devpulse/services/: __init__.py  auth_service.py  crawler.py  fcm_service.py  github_client.py  monitoring.py  pipeline.py  recommendation.py  review_service.py  scheduler.py  stats_service.py  storage.py  summarizer.py  trending_scraper.py  trending_source.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py
backend/nginx/: nginx.conf
backend/nginx/conf.d/: default.conf
backend/scripts/: export_sqlite_to_pg.py
backend/tests/: test_crawler.py  test_github_client.py  test_health.py  test_trending_scraper.py
backend/tests/api/: test_repos.py  test_scheduler.py
backend/tests/cli/: test_cli.py
backend/tests/core/: test_database.py  test_models.py  test_repository.py
backend/tests/llm/: test_llm_providers.py  test_prompts.py  (+1 more)
desktop/src-tauri/: Cargo.toml  tauri.conf.json
(+194 files in other folders)
