[project]
name = "devpulse"
version = "0.0.1"
description = "AI 潮汐 — GitHub Trending AI/ML 周报桌面应用"
requires-python = ">=3.10,<3.12"
dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.32.0,<0.33.0",
    "httpx>=0.28.0,<0.29.0",
    "playwright>=1.52.0,<1.53.0",
    "sqlalchemy>=2.0.36,<2.1.0",
    "asyncpg>=0.30.0,<0.31.0",
    "aiosqlite>=0.20.0,<0.21.0",
    "pydantic>=2.10.0,<2.11.0",
    "pydantic-settings>=2.7.0,<2.8.0",
    "apscheduler>=3.11.0,<3.12.0",
    "python-dotenv>=1.0.1,<1.1.0",
    "rich>=13.9.0,<14.0.0",
    "openai>=1.58.0,<1.59.0",
    "anthropic>=0.39.0,<0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<8.4.0",
    "pytest-asyncio>=0.24.0,<0.25.0",
    "pytest-cov>=6.0.0,<6.1.0",
    "ruff>=0.8.0,<0.9.0",
    "pyright>=1.1.390,<1.2.0",
]

[build-system]
requires = ["setuptools>=75.0,<76.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]